# encrusted

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  pytest.ini  tests.yml
.github/workflows/: build.yml  tests.yml
encrusted/: __init__.py  _decode.py  _encode.py  _encrusted_ext.pyi
notebooks/: benchmark.ipynb
src/: codegen.rs  decode.rs  dispatch.rs  encode.rs  lib.rs
tests/: test_encode_decode.py
