[package]
name = "encrusted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "encrusted"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = "0.17.2"
ndarray = {version = "0.15.6", features = ["serde"]}
bincode = "1.3.3"