[package]
name = "encrusted"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "encrusted"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "encrusted._encrusted_ext"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = "0.17.2"
ndarray = {version = "0.15.6", features = ["serde"]}
bincode = "1.3.3"
base64 = "0.13.1"
serde = "1.0.147"
flate2 = "1.0.24"
paste = "1.0.9"